templates/matrix-base_template.yaml
---
# Source: matrix-base/templates/coturn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-matrix-base-coturn
  labels:
    helm.sh/chart: matrix-base-2.30.0
    app.kubernetes.io/version: "v1.87.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: "matrix"
    component: coturn
spec:
  type: ClusterIP
  ports:
    - port: 3478
      targetPort: turn-3478
      protocol: UDP
      name: turn-3478
    - port: 49152
      targetPort: 49152
      protocol: UDP
      name: turn-49152
    - port: 49153
      targetPort: 49153
      protocol: UDP
      name: turn-49153
    - port: 49154
      targetPort: 49154
      protocol: UDP
      name: turn-49154
    - port: 49155
      targetPort: 49155
      protocol: UDP
      name: turn-49155
    - port: 49156
      targetPort: 49156
      protocol: UDP
      name: turn-49156
    - port: 49157
      targetPort: 49157
      protocol: UDP
      name: turn-49157
    - port: 49158
      targetPort: 49158
      protocol: UDP
      name: turn-49158
    - port: 49159
      targetPort: 49159
      protocol: UDP
      name: turn-49159
    - port: 49160
      targetPort: 49160
      protocol: UDP
      name: turn-49160
    - port: 49161
      targetPort: 49161
      protocol: UDP
      name: turn-49161
    - port: 49162
      targetPort: 49162
      protocol: UDP
      name: turn-49162
    - port: 49163
      targetPort: 49163
      protocol: UDP
      name: turn-49163
    - port: 49164
      targetPort: 49164
      protocol: UDP
      name: turn-49164
    - port: 49165
      targetPort: 49165
      protocol: UDP
      name: turn-49165
    - port: 49166
      targetPort: 49166
      protocol: UDP
      name: turn-49166
    - port: 49167
      targetPort: 49167
      protocol: UDP
      name: turn-49167
    - port: 49168
      targetPort: 49168
      protocol: UDP
      name: turn-49168
    - port: 49169
      targetPort: 49169
      protocol: UDP
      name: turn-49169
    - port: 49170
      targetPort: 49170
      protocol: UDP
      name: turn-49170
    - port: 49171
      targetPort: 49171
      protocol: UDP
      name: turn-49171
    - port: 49172
      targetPort: 49172
      protocol: UDP
      name: turn-49172
  selector:
    app.kubernetes.io/name: matrix-base-coturn
    app.kubernetes.io/instance: release-name
---
# Source: matrix-base/templates/exim/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-matrix-base-exim-relay
  labels:
    helm.sh/chart: matrix-base-2.30.0
    app.kubernetes.io/version: "v1.87.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: "matrix"
    component: mail
spec:
  type: ClusterIP
  ports:
    - port: 25
      targetPort: smtp
      protocol: TCP
      name: smtp
  selector:
    app.kubernetes.io/name: matrix-base-exim-relay
    app.kubernetes.io/instance: release-name
---
# Source: matrix-base/templates/riot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-matrix-base-riot
  labels:
    helm.sh/chart: matrix-base-2.30.0
    app.kubernetes.io/version: "v1.87.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: "matrix"
    
    component: element
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: matrix-base-riot
    app.kubernetes.io/instance: release-name
---
# Source: matrix-base/templates/synapse/federation-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-matrix-base-synapse-federation
  labels:
    helm.sh/chart: matrix-base-2.30.0
    app.kubernetes.io/version: "v1.87.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: "matrix"
    component: synapse
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: matrix-base-synapse
    app.kubernetes.io/instance: release-name
---
# Source: matrix-base/templates/synapse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-matrix-base-synapse
  labels:
    helm.sh/chart: matrix-base-2.30.0
    app.kubernetes.io/version: "v1.87.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: "matrix"
    component: synapse
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/_synapse/metrics"
    prometheus.io/port: "9092"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 9092
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/name: matrix-base-synapse
    app.kubernetes.io/instance: release-name
---
# Source: matrix-base/templates/coturn/deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: release-name-matrix-base-coturn
  labels:
    helm.sh/chart: matrix-base-2.30.0
    app.kubernetes.io/version: "v1.87.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: "matrix"
    component: coturn
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: matrix-base-coturn
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        # re-roll deployment on config change
        checksum/coturn-config: 35d861971a90c0f84dcd788b3efebd5d003a8a98232ad944571a87a5d8f90cc7
      labels:
        app.kubernetes.io/name: matrix-base-coturn
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      hostNetwork: true
      containers:
        - name: "coturn"
          image: "instrumentisto/coturn:4.5"
          imagePullPolicy: IfNotPresent
          args: ["-c", "/turnserver.conf"]
          ports:
            - name: turn-3478
              containerPort: 3478
              protocol: UDP
            - name: turn-49152
              containerPort: 49152
              hostPort: 49152
              protocol: UDP
            - name: turn-49153
              containerPort: 49153
              hostPort: 49153
              protocol: UDP
            - name: turn-49154
              containerPort: 49154
              hostPort: 49154
              protocol: UDP
            - name: turn-49155
              containerPort: 49155
              hostPort: 49155
              protocol: UDP
            - name: turn-49156
              containerPort: 49156
              hostPort: 49156
              protocol: UDP
            - name: turn-49157
              containerPort: 49157
              hostPort: 49157
              protocol: UDP
            - name: turn-49158
              containerPort: 49158
              hostPort: 49158
              protocol: UDP
            - name: turn-49159
              containerPort: 49159
              hostPort: 49159
              protocol: UDP
            - name: turn-49160
              containerPort: 49160
              hostPort: 49160
              protocol: UDP
            - name: turn-49161
              containerPort: 49161
              hostPort: 49161
              protocol: UDP
            - name: turn-49162
              containerPort: 49162
              hostPort: 49162
              protocol: UDP
            - name: turn-49163
              containerPort: 49163
              hostPort: 49163
              protocol: UDP
            - name: turn-49164
              containerPort: 49164
              hostPort: 49164
              protocol: UDP
            - name: turn-49165
              containerPort: 49165
              hostPort: 49165
              protocol: UDP
            - name: turn-49166
              containerPort: 49166
              hostPort: 49166
              protocol: UDP
            - name: turn-49167
              containerPort: 49167
              hostPort: 49167
              protocol: UDP
            - name: turn-49168
              containerPort: 49168
              hostPort: 49168
              protocol: UDP
            - name: turn-49169
              containerPort: 49169
              hostPort: 49169
              protocol: UDP
            - name: turn-49170
              containerPort: 49170
              hostPort: 49170
              protocol: UDP
            - name: turn-49171
              containerPort: 49171
              hostPort: 49171
              protocol: UDP
            - name: turn-49172
              containerPort: 49172
              hostPort: 49172
              protocol: UDP
          volumeMounts:
            - name: coturn-config
              mountPath: /turnserver.conf
              subPath: turnserver.conf
              readOnly: true
            - name: var-tmp
              mountPath: /var/tmp
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
      volumes:
        - name: coturn-config
          configMap:
            name: release-name-matrix-base-coturn-config
        - name: var-tmp
          emptyDir: {}
---
# Source: matrix-base/templates/exim/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-matrix-base-exim-relay
  labels:
    helm.sh/chart: matrix-base-2.30.0
    app.kubernetes.io/version: "v1.87.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: "matrix"
    component: mail
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: matrix-base-exim-relay
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: matrix-base-exim-relay
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        runAsUser: 100
        runAsGroup: 101
      containers:
        - name: "exim-relay"
          image: "devture/exim-relay:4.95-r0-4"
          imagePullPolicy: IfNotPresent
          ports:
            - name: smtp
              containerPort: 8025
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: smtp
          startupProbe:
            tcpSocket:
              port: smtp
          livenessProbe:
            tcpSocket:
              port: smtp
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
---
# Source: matrix-base/templates/riot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-matrix-base-riot
  labels:
    helm.sh/chart: matrix-base-2.30.0
    app.kubernetes.io/version: "v1.87.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: "matrix"
    
    component: element
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: matrix-base-riot
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        # re-roll deployment on config change
        checksum/riot-config: 1d4714ba1d735c5d82112af19273ddca2fd46a6c6d6f583dee67d3c0d8763c4b
      labels:
        app.kubernetes.io/name: matrix-base-riot
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: "riot"
          image: "vectorim/riot-web:v1.7.33"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config.json
              name: riot-config
              subPath: config.json
              readOnly: true
            - mountPath: /etc/nginx/nginx.conf
              name: riot-config
              subPath: nginx.conf
              readOnly: true
            - mountPath: /etc/nginx/conf.d/default.conf
              name: riot-config
              subPath: default.conf
              readOnly: true
            - mountPath: /var/cache/nginx
              name: ephemeral
              subPath: cache
            - mountPath: /var/run/pid
              name: ephemeral
              subPath: pid
          readinessProbe:
            httpGet:
              path: /
              port: http
          startupProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            httpGet:
              path: /
              port: http
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
      volumes:
        - name: riot-config
          configMap:
            name: release-name-matrix-base-riot-config
        # ephemeral cache, PID file, and any other temporary files nginx needs access to
        - name: ephemeral
          emptyDir: {}
---
# Source: matrix-base/templates/synapse/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-matrix-base-synapse
  labels:
    helm.sh/chart: matrix-base-2.30.0
    app.kubernetes.io/version: "v1.87.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: "matrix"
    component: synapse
spec:
  revisionHistoryLimit: 5
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: matrix-base-synapse
      app.kubernetes.io/instance: release-name
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        # re-roll deployment on homeserver.yaml change
        checksum/synapse-config: e809c1b710b362eb10acfa3f20189ea09d39c834318c88465fd3305eb70a2d05
      labels:
        app.kubernetes.io/name: matrix-base-synapse
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      # generate signing key only on fresh install
      containers:
        - name: "synapse"
          image: "matrixdotorg/synapse:v1.87.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8008
              protocol: TCP
            - name: metrics
              containerPort: 9092
              protocol: TCP
          volumeMounts:
            - name: synapse-config
              mountPath: /data
            - name: signing-key
              mountPath: /data/keys
            - name: media-store
              mountPath: /data/media_store
            - name: uploads
              mountPath: /data/uploads
            - name: tmp
              mountPath: /tmp
          readinessProbe:
            httpGet:
              path: /_matrix/static/
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              path: /_matrix/static/
              port: http
            failureThreshold: 6
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /_matrix/static/
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
          securityContext:
            runAsGroup: 1000
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: true
      volumes:
        - name: synapse-config
          configMap:
            name: release-name-matrix-base-synapse-config
        - name: signing-key
          persistentVolumeClaim:
            claimName: release-name-matrix-base-signing-key
        - name: media-store
          persistentVolumeClaim:
            claimName: release-name-matrix-base-media-store
        # Ephemeral in-progress uploads
        - name: uploads
          emptyDir: {}
        - name: tmp
          emptyDir: {}
---
# Source: matrix-base/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-matrix-base
  labels:
    helm.sh/chart: matrix-base-2.30.0
    app.kubernetes.io/version: "v1.87.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: "matrix"
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_intercept_errors off;
spec:
  rules:
    - host: matrix.chart-example.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: "release-name-matrix-base-synapse"
                port:
                  number: 80
    - host: element.chart-example.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: "release-name-matrix-base-riot"
                port:
                  number: 80
    - host: matrix-fed.chart-example.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: "release-name-matrix-base-synapse-federation"
                port:
                  number: 80
